--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ importlib-resources = "5.10.0"
 Faker = "14.2.0"
 sqlalchemy-serializer = "*"
 python-dotenv = "*"
+flask-bcrypt = "*"
 
 [requires]
 python_full_version = "3.8.13"
